# typst-xcc-wrapper

./: .gitignore  CMakeLists.txt  README.md  demo.typ  lib.typ  pixi.toml
src/: compiler_wrapper.c  preprocessor_vfs.c  tinycbor_dup_string.c  typst_xcc_compiler.c  vfs.c  vfs.h  wasi_stub.c  wasi_stub.h
src/cbor/: tinycbor_encoder.c  tinycbor_parser.c  tinycbor_shim.h
src/cbor/shims/arpa/: inet.h
typ/: lib.typ  wrapper.typ
